// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BentoMenuButton Matches Snapshot (defaultOpen) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c6 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
  height: 100%;
  line-height: 2rem;
  margin: 0;
  padding: 0 var(--spacing-1x);
}

.c8 span {
  line-height: 1.25rem;
  margin: auto 0;
}

.c8 span:nth-of-type(2) {
  color: #60666E;
  font-size: 0.75rem;
}

.c7 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: #004E78;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
}

.c3 {
  margin-left: var(--spacing-1x);
}

.c5 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="true"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    Test Button
    <svg
      aria-hidden="true"
      class="c3"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c4 c5"
    data-testid="menu-list"
  >
    <ul
      class="c6"
      role="group"
    >
      <li>
        <a
          class="c7"
          data-testid="listitem-optionA"
          href="/testa"
        >
          <div
            class="c8"
          >
            <span>
              Option A
            </span>
          </div>
        </a>
      </li>
      <li>
        <a
          class="c7"
          data-testid="listitem-optionB"
          href="/testb"
        >
          <div
            class="c8"
          >
            <span>
              Option B
            </span>
          </div>
        </a>
      </li>
      <li>
        <a
          class="c7"
          data-testid="listitem-optionC"
          href="/testc"
        >
          <div
            class="c8"
          >
            <span>
              Option C
            </span>
          </div>
        </a>
      </li>
      <li>
        <a
          class="c7"
          data-testid="listitem-optionD"
          href="/testd"
        >
          <div
            class="c8"
          >
            <span>
              Option D
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`BentoMenuButton Matches Snapshot 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 32px;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1:focus {
  outline: none;
}

.c1:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #00629666;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1 > svg {
  color: inherit;
}

.c4 {
  background-color: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-shadow: 0 10px 20px 0 rgba(0,0,0,0.19);
  list-style-type: none;
  position: absolute;
  width: 100%;
}

.c6 {
  margin: 0;
  overflow-y: auto;
  padding: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.875rem;
  height: 100%;
  line-height: 2rem;
  margin: 0;
  padding: 0 var(--spacing-1x);
}

.c8 span {
  line-height: 1.25rem;
  margin: auto 0;
}

.c8 span:nth-of-type(2) {
  color: #60666E;
  font-size: 0.75rem;
}

.c7 {
  color: #000000;
  display: block;
  font-size: 0.875rem;
  height: 2.5rem;
  line-height: 2rem;
  overflow: hidden;
  padding: var(--spacing-1x) var(--spacing-2x);
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.c7:focus {
  box-shadow: inset 0 0 0 3px #00629666,inset 0 0 0 1px #006296;
  outline: none;
}

.c7:hover {
  background-color: #DBDEE1;
}

.c0 {
  position: relative;
}

.c2 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  text-transform: unset;
}

.c2:hover {
  background-color: #004E78;
}

.c3 {
  margin-left: var(--spacing-1x);
}

.c5 {
  max-width: 350px;
  min-width: 200px;
  right: 0;
  width: initial;
}

<nav
  aria-label="Menu"
  class="c0"
>
  <button
    aria-expanded="false"
    class="c1 c2"
    data-testid="menu-button"
    type="button"
  >
    Test Button
    <svg
      aria-hidden="true"
      class="c3"
      color="currentColor"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
  <div
    class="c4 c5"
    data-testid="menu-list"
    hidden=""
  >
    <ul
      class="c6"
      role="group"
    >
      <li>
        <a
          class="c7"
          data-testid="listitem-optionA"
          href="/testa"
        >
          <div
            class="c8"
          >
            <span>
              Option A
            </span>
          </div>
        </a>
      </li>
      <li>
        <a
          class="c7"
          data-testid="listitem-optionB"
          href="/testb"
        >
          <div
            class="c8"
          >
            <span>
              Option B
            </span>
          </div>
        </a>
      </li>
      <li>
        <a
          class="c7"
          data-testid="listitem-optionC"
          href="/testc"
        >
          <div
            class="c8"
          >
            <span>
              Option C
            </span>
          </div>
        </a>
      </li>
      <li>
        <a
          class="c7"
          data-testid="listitem-optionD"
          href="/testd"
        >
          <div
            class="c8"
          >
            <span>
              Option D
            </span>
          </div>
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
